# NixOS-Config

./: .envrc  .gitignore  .mcp.json  .sops.yaml  CLAUDE.md  CursorConvo.md  Readme.md  flake.nix  package.json  shell.nix
docs/: Connectivity.md
docs/AI/: ags-v3-hyprland-development.md
home-manager/batuhan/: default.nix  secrets.yaml  su-ana.nix  su-ata.nix  su-iyesi.nix  umay.nix  yel-ana.nix  yertengri.nix
home-manager/joeysaur/: default.nix  yertengri.nix
home-manager/steam/: default.nix
homeManagerModules/: default.nix
hosts/: default.nix
hosts/default/: configuration.nix  hardware-configuration.nix
hosts/umay/: configuration.nix  default.nix  hardware-configuration.nix  home.nix
lib/: default.nix
modules/home-manager/: claude-code.nix  claude-settings-schema.nix  code-cursor.nix  cursor.nix  cursorFix.nix  default.nix  powerlevel10k.nix  userConfig.nix
modules/nix-darwin/: default.nix
modules/nixos/: default.nix
myLib/: default.nix
nixCats/: categoryDefinitions.nix  default.nix  init.lua  packageDefinitions.nix  shell.nix
nixos/: default.nix
nixos/bundles/: archives.nix  filesystems.nix  nix.nix  styling.nix  tools.nix  utils.nix
nixos/features/: bluetooth.nix  consolefont.nix  default-user.nix  defaultUser.nix  displayManager.nix  droidcam.nix  fonts.nix  gaming.nix  gnome.nix  grub.nix  hyprland.nix  ibus.nix  kde.nix  keymap.nix  locale.nix  matlab.nix  obs.nix  plasma.nix  polkit.nix  sddm.nix  shell.nix  steam.nix  virtualization.nix  xremap.nix  zsh.nix
nixos/hosts/: default.nix  secrets.yaml
nixos/services/: avahi.nix  cups.nix  docker.nix  droidcam.nix  earlyoom.nix  fingerprint.nix  firefly-iii.nix  (+22 more)
nixosModules/: default.nix
overlays/: default.nix  modifications.nix
pkgs/: default.nix  xplr-plugins.nix  xplrPlugins.nix
shells/: ags.nix  default.nix  python.nix  typescript.nix
templates/: default.nix
templates/rustTemplate/: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  Cargo.toml  README.md  cliff.toml  commitlint.config.js  flake.nix
templates/rustTemplate/.githooks/: commit-msg  install-hooks.sh  post-commit
templates/uvPythonTemplate/: .gitignore  .mcp.json  flake.nix  package.json  pyproject.toml
templates/uvPythonTemplate/nix/: apps.nix  packages.nix  shells.nix
templates/uvPythonTemplate/src/flake_template/: __init__.py
templates/uvPythonTemplate/src/flowgenius/: __init__.py
templates/uvPythonTemplate/src/template/: __init__.py
(+558 files in other folders)
