[project]
name = "flake_template"
version = "0.0.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "<name>", email = "<name>@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
flowgenius = "flake_template:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
