[project]
name = "template"
version = "0.0.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "<name>", email = "<name>@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1",
]

[project.scripts]
template = "template:main"

[build-system]
requires = ["hatchling", "editables"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py313"
line-length = 100
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM", "RUF"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.hatch.build.targets.wheel]
packages = ["src/template"]
